--- a/Tarea 1/html/sueldo.html
+++ b/Tarea 1/html/sueldo.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Sueldo</title>
-</head>
-<body>
-    <div class="mb-3"></div>
-    <div class="container-fluid col-8">
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text">$</span>
-            </div>
-            <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" id="saldo">
-            <div class="input-group-append">
-              <span class="input-group-text">.00</span>
-            </div>
-        </div>
-        <button type="button" class="btn btn-success" id="btnAceptar">Aceptar</button>
-        <div id="imprimir"></div>
-    </div>
-      
 
-    <script src="../js/sueldo.js" type="module"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>Sueldo</title>
+</head>
+
+<body>
+  <div class="mb-3"></div>
+  <div class="container-fluid col-8">
+    <div class="input-group mb-3">
+      <div class="input-group-prepend">
+        <span class="input-group-text">$</span>
+      </div>
+      <input type="text" class="form-control" aria-label="Amount (to the nearest dollar)" id="saldo">
+      <div class="input-group-append">
+        <span class="input-group-text">.00</span>
+      </div>
+    </div>
+    <button type="button" class="btn btn-success" id="btnAceptar">Aceptar</button>
+    <div id="imprimir"></div>
+  </div>
+
+
+  <script src="../js/sueldo.js" type="module"></script>
 </body>
+
 </html>
